--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -91,7 +91,7 @@
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             </a>
-            <div class="dropdown-menu dropdown-menu-start" aria-labelledby="navbarDropdown">
+            <div class="dropdown-menu dropdown-menu-start" style="left: -150px;" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="#">PT</a>
                 <a class="dropdown-item" href="#">ENG</a>
             </div>
@@ -130,9 +130,7 @@
               <li class="list-inline-item"><b>62 <span>Incubadores</span></b></li>
               <li class="list-inline-item"><b>108 <span>Startups</span></b></li>
           </ul>
-
       </div>
-
 </div>
 <div class="geometric" style="position: absolute; width: auto; height: auto;">
   <img src="assets/img/constantes/geometric.png" alt="" class="img-geometric">
@@ -149,33 +147,41 @@
 <div class="container-fluid last" style="margin-top: 8%;">
   <div class="row d-flex justify-content-center" style="width: 100%; height: auto;">
 
-      <div class="col-md-3 redes">
-          <img src="assets/img/constantes/redes.png" style="width: auto; height: 100px; float: right;">
+      <div class="col-md-2 redes">
+          <img src="assets/img/constantes/redes.png" style="width: 90%; height: auto; float: right;">
 
       </div>
       <div class="col-md-1">
-        <h2>Help</h2>
+        <div>
+        <span>Help</span>
       <p> FAQ </p>
       <p> Customer service </p>
       <p> How to guides </p>
-      </div>
+    </div>
+    </div>
       <div class="col-md-1">
-        <h2>Other</h2>
+        <div>
+        <span>Other</span>
         <p> Privacy Policy </p>
         <p> Sitemap </p>
         <p> Subscriptions </p>
       </div>
+      </div>
       <div class="col-md-1">
-        <h2>Pogram</h2>
+        <div>
+        <span>Pogram</span>
         <p> Nosso saber </p>
         <p> Rede INAPEM </p>
         <p> Feito em Angola </p>
       </div>
+      </div>
       <div class="col-md-4">
-        <h2>Contact us</h2>
+        <div>
+        <span>Contact us</span>
         <p> mailto:geralinapem.gov.ao </p>
         <p> +244 937 537 383 </p>
         <p> Largo 1º Maio, Edificio Torres Dipanda, Lado A 4º Andar, Luanda - Angola </p>
+      </div>
       </div>
   </div>
 </div>
