--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -68,6 +68,13 @@ line-height: normal;
   position: relative;
   z-index: 9999;
   flex-shrink: 0;
+  .row{
+    background-repeat: no-repeat;
+    background-position: right;
+    background-size: cover;
+      background-size: 100%;
+      background-image: url('../assets/img/constantes/linhas.png');
+  }
 }
 
 
@@ -143,6 +150,30 @@ line-height: normal;
 display: inline;
 }
 }
+
+.last{
+  div div{
+      margin: 1.5%;
+  }
+
+  .col-md-1 div span{
+     color: #000;
+ font-family: Poppins;
+ font-size: 30px;
+ font-style:inherit;
+ font-weight: 400;
+ line-height: normal;
+   }
+   .col-md-4 div span{
+    color: #000;
+font-family: Poppins;
+font-size: 30px;
+font-style:inherit;
+font-weight: 400;
+line-height: normal;
+  }
+ }
+
 
 @media screen and (max-width: 1700px){
   .header-inapem-image{
