--- a/src/app/ecossistema/ecossistema.component.html
+++ b/src/app/ecossistema/ecossistema.component.html
@@ -125,5 +125,12 @@
 
 
 
-<img class="last" src="assets/img/ecossistema/lastbarra.png" alt=""
-  style="width: 100%; margin-top: 7%; margin-bottom: 10%;">
+<div class="numbers-details container-fluid">
+  <div class="row" style="width: 100%;">
+      <ul class="list-inline d-flex justify-content-center">
+          <li class="list-inline-item"><b>12.606 <span>Empreendedores</span></b></li>
+          <li class="list-inline-item"><b>141 <span>Startups</span></b></li>
+          <li class="list-inline-item"><b>51 <span>Incubadoras</span></b></li>
+      </ul>
+  </div>
+</div>
